docs/api/qiskit/0.19/qiskit.pulse.instructions.Delay.mdx
---
title: Delay
description: API reference for qiskit.pulse.instructions.Delay
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.instructions.Delay
---

# Delay

<Class id="qiskit.pulse.instructions.Delay" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/pulse/instructions/delay.py" signature="Delay(duration, channel=None, name=None)" modifiers="class">
  A blocking instruction with no other effect. The delay is used for aligning and scheduling other instructions.

  **Example**

  To schedule an instruction at time = 10, on a channel assigned to the variable `channel`, the following could be used:

  ```python
  sched = Schedule(name="Delay instruction example")
  sched += Delay(10, channel)
  sched += Gaussian(duration, amp, sigma, channel)
  ```

  The `channel` will output no signal from time=0 up until time=10.

  Create a new delay instruction.

  No other instruction may be scheduled within a `Delay`.

  **Parameters**

  *   **duration** (`int`) – Length of time of the delay in terms of dt.
  *   **channel** (`Optional`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]) – The channel that will have the delay.
  *   **name** (`Optional`\[`str`]) – Name of the delay for display purposes.

  ## Attributes

  <span id="delay-channel" />

  ### channel

  <Attribute id="qiskit.pulse.instructions.Delay.channel" attributeTypeHint="qiskit.pulse.channels.Channel">
    Return the [`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel") that this instruction is scheduled on.

    **Return type**

    [`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")
  </Attribute>

  <span id="delay-channels" />

  ### channels

  <Attribute id="qiskit.pulse.instructions.Delay.channels" attributeTypeHint="Tuple[qiskit.pulse.channels.Channel]">
    Returns channels that this schedule uses.

    **Return type**

    `Tuple`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]
  </Attribute>

  <span id="delay-command" />

  ### command

  <Attribute id="qiskit.pulse.instructions.Delay.command" attributeTypeHint="qiskit.pulse.commands.command.Command">
    The associated command. Commands are deprecated, so this method will be deprecated shortly.

    **Return type**

    `Command`
  </Attribute>

  <span id="delay-duration" />

  ### duration

  <Attribute id="qiskit.pulse.instructions.Delay.duration" attributeTypeHint="int">
    Duration of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="delay-id" />

  ### id

  <Attribute id="qiskit.pulse.instructions.Delay.id" attributeTypeHint="int">
    Unique identifier for this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="delay-instructions" />

  ### instructions

  <Attribute id="qiskit.pulse.instructions.Delay.instructions" attributeTypeHint="Tuple[Tuple[int, qiskit.pulse.instructions.instruction.Instruction]]">
    Iterable for getting instructions from Schedule tree.

    **Return type**

    `Tuple`\[`Tuple`\[`int`, [`Instruction`](qiskit.pulse.instructions.Instruction "qiskit.pulse.instructions.instruction.Instruction")]]
  </Attribute>

  <span id="delay-name" />

  ### name

  <Attribute id="qiskit.pulse.instructions.Delay.name" attributeTypeHint="str">
    Name of this instruction.

    **Return type**

    `str`
  </Attribute>

  <span id="delay-operands" />

  ### operands

  <Attribute id="qiskit.pulse.instructions.Delay.operands" attributeTypeHint="Tuple">
    Return instruction operands.

    **Return type**

    `Tuple`
  </Attribute>

  <span id="delay-start-time" />

  ### start\_time

  <Attribute id="qiskit.pulse.instructions.Delay.start_time" attributeTypeHint="int">
    Relative begin time of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="delay-stop-time" />

  ### stop\_time

  <Attribute id="qiskit.pulse.instructions.Delay.stop_time" attributeTypeHint="int">
    Relative end time of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="delay-timeslots" />

  ### timeslots

  <Attribute id="qiskit.pulse.instructions.Delay.timeslots" attributeTypeHint="Dict[qiskit.pulse.channels.Channel, List[Tuple[int, int]]]">
    Occupied time slots by this instruction.

    **Return type**

    `Dict`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel"), `List`\[`Tuple`\[`int`, `int`]]]
  </Attribute>

  ## Methods

  <span id="delay-call" />

  ### \_\_call\_\_

  <Function id="qiskit.pulse.instructions.Delay.__call__" signature="Delay.__call__(channel)">
    Return new `Delay` that is fully instantiated with both `duration` and a `channel`.

    **Parameters**

    **channel** ([`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")) – The channel that will have the delay.

    **Return type**

    [`Delay`](qiskit.pulse.instructions.Delay "qiskit.pulse.instructions.delay.Delay")

    **Returns**

    Complete and ready to schedule `Delay`.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If `channel` has already been set.
  </Function>

  <span id="delay-append" />

  ### append

  <Function id="qiskit.pulse.instructions.Delay.append" signature="Delay.append(schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`.

    **Parameters**

    *   **schedule** (`ScheduleComponent`) – schedule to be appended
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="delay-ch-duration" />

  ### ch\_duration

  <Function id="qiskit.pulse.instructions.Delay.ch_duration" signature="Delay.ch_duration(*channels)">
    Return duration of the supplied channels in this Instruction.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="delay-ch-start-time" />

  ### ch\_start\_time

  <Function id="qiskit.pulse.instructions.Delay.ch_start_time" signature="Delay.ch_start_time(*channels)">
    Return minimum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="delay-ch-stop-time" />

  ### ch\_stop\_time

  <Function id="qiskit.pulse.instructions.Delay.ch_stop_time" signature="Delay.ch_stop_time(*channels)">
    Return maximum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="delay-draw" />

  ### draw

  <Function id="qiskit.pulse.instructions.Delay.draw" signature="Delay.draw(dt=1, style=None, filename=None, interp_method=None, scale=1, channels_to_plot=None, plot_all=False, plot_range=None, interactive=False, table=True, label=False, framechange=True, scaling=None, channels=None)">
    Plot the instruction.

    **Parameters**

    *   **dt** (`float`) – Time interval of samples
    *   **style** (*Optional\[*[*SchedStyle*](qiskit.visualization.pulse.qcstyle#qiskit.visualization.pulse.qcstyle.SchedStyle "qiskit.visualization.pulse.qcstyle.SchedStyle")*]*) – A style sheet to configure plot appearance
    *   **filename** (`Optional`\[`str`]) – Name required to save pulse image
    *   **interp\_method** (`Optional`\[`Callable`]) – A function for interpolation
    *   **scale** (`float`) – Relative visual scaling of waveform amplitudes
    *   **channels\_to\_plot** (`Optional`\[`List`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]]) – Deprecated, see channels
    *   **plot\_all** (`bool`) – Plot empty channels
    *   **plot\_range** (`Optional`\[`Tuple`\[`float`]]) – A tuple of time range to plot
    *   **interactive** (`bool`) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **table** (`bool`) – Draw event table for supported instructions
    *   **label** (`bool`) – Label individual instructions
    *   **framechange** (`bool`) – Add framechange indicators
    *   **scaling** (`Optional`\[`float`]) – Deprecated, see scale
    *   **channels** (`Optional`\[`List`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]]) – A list of channel names to plot

    **Returns**

    A matplotlib figure object of the pulse schedule

    **Return type**

    matplotlib.figure
  </Function>

  <span id="delay-flatten" />

  ### flatten

  <Function id="qiskit.pulse.instructions.Delay.flatten" signature="Delay.flatten()">
    Return itself as already single instruction.

    **Return type**

    [`Instruction`](qiskit.pulse.instructions.Instruction "qiskit.pulse.instructions.instruction.Instruction")
  </Function>

  <span id="delay-insert" />

  ### insert

  <Function id="qiskit.pulse.instructions.Delay.insert" signature="Delay.insert(start_time, schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.

    **Parameters**

    *   **start\_time** (`int`) – Time to insert the schedule schedule
    *   **schedule** (`ScheduleComponent`) – Schedule to insert
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="delay-shift" />

  ### shift

  <Function id="qiskit.pulse.instructions.Delay.shift" signature="Delay.shift(time, name=None)">
    Return a new schedule shifted forward by time.

    **Parameters**

    *   **time** (`int`) – Time to shift by
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="delay-union" />

  ### union

  <Function id="qiskit.pulse.instructions.Delay.union" signature="Delay.union(*schedules, name=None)">
    Return a new schedule which is the union of self and schedule.

    **Parameters**

    *   **\*schedules** – Schedules to be take the union with this Instruction.
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>
</Class>

